--- a/MarcandoRuta/Base.lproj/Main.storyboard
+++ b/MarcandoRuta/Base.lproj/Main.storyboard
@@ -22,10 +22,11 @@
                             </mapView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ddr-RL-8Ai">
                                 <rect key="frame" x="75" y="28" width="225" height="29"/>
+                                <color key="backgroundColor" red="0.98659331110000004" green="1" blue="0.97286574329999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <segments>
                                     <segment title="Standard"/>
-                                    <segment title="Satellite"/>
-                                    <segment title="Hybrid"/>
+                                    <segment title="Satelite"/>
+                                    <segment title="Hibrido"/>
                                 </segments>
                                 <connections>
                                     <action selector="tipoMapaCambio:" destination="BYZ-38-t0r" eventType="valueChanged" id="2ck-fC-hew"/>
